; ModuleID = '/home/carl/AnghaBench/mpv/osdep/win32/extr_pthread.c_find_thread_info.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/win32/extr_pthread.c_find_thread_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_thread_info = type { i64 }

@pthread_table_num = common dso_local global i32 0, align 4
@pthread_table = common dso_local global %struct.m_thread_info* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.m_thread_info* (i64)* @find_thread_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.m_thread_info* @find_thread_info(i64 %0) #0 {
  %2 = alloca %struct.m_thread_info*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %24, %1
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @pthread_table_num, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %27

9:                                                ; preds = %5
  %10 = load i64, i64* %3, align 8
  %11 = load %struct.m_thread_info*, %struct.m_thread_info** @pthread_table, align 8
  %12 = load i32, i32* %4, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.m_thread_info, %struct.m_thread_info* %11, i64 %13
  %15 = getelementptr inbounds %struct.m_thread_info, %struct.m_thread_info* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp eq i64 %10, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %9
  %19 = load %struct.m_thread_info*, %struct.m_thread_info** @pthread_table, align 8
  %20 = load i32, i32* %4, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.m_thread_info, %struct.m_thread_info* %19, i64 %21
  store %struct.m_thread_info* %22, %struct.m_thread_info** %2, align 8
  br label %28

23:                                               ; preds = %9
  br label %24

24:                                               ; preds = %23
  %25 = load i32, i32* %4, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %4, align 4
  br label %5

27:                                               ; preds = %5
  store %struct.m_thread_info* null, %struct.m_thread_info** %2, align 8
  br label %28

28:                                               ; preds = %27, %18
  %29 = load %struct.m_thread_info*, %struct.m_thread_info** %2, align 8
  ret %struct.m_thread_info* %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
